# apothecary

./: .appveyor.yml  .dockerignore  .gitignore  .travis.disabled.yml  .travis.yml  LICENSE.md  README.md
.github/: build.yml
.github/disabled/: build-android.yml  build-catos.yml  build-emscripten.yml  build-ios.yml  build-linux-arm.yml  build-linux64.yml  build-macos.yml  build-msys2.yml  build-tvos.yml  build-vs2019.yml  build-vs2022-arm64.yml  build-vs2022-arm64ec.yml  build-vs2022-x64.yml  build-xros.yml  clean-up-cache.yml
.github/workflows/: build-android.yml  build-catos.yml  build-emscripten.yml  build-ios.yml  build-linux-arm.yml  build-linux64.yml  build-macos.yml  build-msys2.yml  build-tvos.yml  build-vs-arm64.yml  build-vs.yml  build-vs2022-arm64.yml  build-vs2022-arm64ec.yml  build-vs2022-x64-clang.yml  build-vs2022-x64.yml  build-vs2022.yml  build-vs2022_arm64.yml  build-vs2022_arm64ec.yml  build-vs2022_x64.yml  build-watchos.yml  build-xcframework.yml  build-xros.yml  build.yml
apothecary/: PROGRESS.md  README.md  aarch64-linux-gnu.toolchain.cmake  android_configure.sh  apothecary  ios.toolchain.cmake  ios_configure.sh  linuxaarch64_configure.sh  linuxarmv6_configure.sh  linuxarmv6l_configure.sh  linuxarmv7l_configure.sh  ostype.sh  paths.make
apothecary/formulas/: assimp.sh  cairo.sh  curl.sh  fmod.sh  fmodex.sh  fmt.sh  glew.sh  glfw.sh  glm.sh  json.sh  libusb.sh  metal.sh  opencv.sh  portaudio.sh  pugixml.sh  rtAudio.sh  uriparser.sh  utf8.sh  videoInput.sh
apothecary/formulas/FreeImage/: FreeImage-3.17.0-OpenframeworksStatic.patch  FreeImage.sh  Makefile.ios  Makefile.osx  openExr.patch
apothecary/formulas/_depends/: automake.sh  brotli.sh  fontconfig.sh  pixman.sh  pkg-config.sh  zlib.sh
apothecary/formulas/assimp/: assimp.sh  build.sh
apothecary/formulas/boost/: boost.sh  boost.sh~  project-config-android_arm.jam  project-config-android_armv7.jam  project-config-android_linux_armv7.jam  project-config-android_linux_x86.jam  project-config-android_x86.jam  visualc.hpp.patch  visualc.hpp.patch_1.58
apothecary/formulas/cairo/: CMakeLists.txt  Configure_config.cmake  Configure_features.cmake  cairo.sh  features.h.cmake
apothecary/formulas/cairo/cmake/: FindFontconfig.cmake  FindPixman.cmake
apothecary/formulas/cairo/src/: CMakeLists.txt  cairo-wideint-type-private.h  sources.cmake
apothecary/formulas/curl/: CMakeLists.txt  build-openssl.bat  config.guess.sh  curl.sh  tryrun.cmake
apothecary/formulas/fmt/: CMakeLists.txt  fmt.sh
apothecary/formulas/freetype/: CMakeLists.txt  (+1 more)
apothecary/formulas/libusb/: CMakeLists.txt  libusb.sh  project.pbxproj
apothecary/formulas/libxml2/: CMakeLists.txt  config.h  glob.h  libxml2.sh
apothecary/formulas/libxml2/vs2015/: libxml2.sln  libxml2.vcxproj  libxml2.vcxproj.filters  xmlversion.h
apothecary/formulas/svgtiny/: CMakeLists.txt  Makefile  autogenerated_colors.c  libdom.patch  libparseutils.patch  libwapcaplet.h  make-aliases.pl  svgtiny.sh
apothecary/formulas/svgtiny/vs2015/: svgtiny.sln  vs2015.vcxproj  vs2015.vcxproj.filters
apothecary/formulas/svgtiny/vs2017/: svgtiny.sln  vs2017.vcxproj
apothecary/formulas/svgtiny/vs2017/x64/Debug/svgtiny.tlog/: CL.command.1.tlog  svgtiny.lastbuildstate
apothecary/formulas/svgtiny/vs2019/: svgtiny.sln  vs2019.vcxproj.filters
apothecary/formulas/uriparser/: CMakeLists.txt  uriparser.sh
apothecary/formulas/uriparser/vs2015/: uriparser.sln  uriparser.vcxproj  uriparser.vcxproj.filters
apothecary/toolchains/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabi.toolchain.cmake  ios.toolchain.cmake  linux-clang.toolchain.cmake
docker/: README.md  Readme.md
docker/android/: Dockerfile
docker/emscripten/: Dockerfile
docker/linux/: Dockerfile  Dockerfile.gcc5  Dockerfile.gcc6
scripts/: artifact-dl.sh  artifact-ex.sh  artifact.sh  build.sh  build_one.sh  calculate_formulas.sh  download_libs.sh  downloader.sh  format.sh  id_rsa.enc  load.sh  package.sh  save.sh  secure.sh  simd.sh
scripts/android/: build.sh  build_android_arm64.sh  build_android_armv7.sh  build_android_x86.sh  build_android_x86_64.sh  install-cmake.sh  install.sh
scripts/catos/: build_and_deploy_all.sh  build_catos_arm64.sh  build_catos_x86_64.sh  build_xcframework.sh  install.sh  xcframework_all.sh
scripts/emscripten/: build_and_deploy_all.sh  build_emscripten.sh  install.sh  setup.sh  setup_env_unix.sh  setup_env_windows.sh
scripts/ios/: build_and_deploy_all.sh  build_ios_SIM_arm64.sh  build_ios_arm64.sh  build_ios_x86_64.sh  build_xcframework.sh  install.sh  xcframework_all.sh
scripts/linux/: build.sh  compile_gcc5.sh  compile_gcc6.sh  install.sh
scripts/linuxaarch64/: aarch64-linux-gnu-toolchain.cmake  arch-bootstrap.sh  arch-bootstrap_downloadonly.sh  install.sh  install_and_build.sh
scripts/linuxarmv6l/: install.sh  multistrap.conf  setup.sh
scripts/linuxarmv7l/: arch-bootstrap.sh  arch-bootstrap_downloadonly.sh  arm-linux-gnueabihf-toolchain.cmake  install.sh
scripts/macos/: build_xcframework.sh  install.sh  xcframework_all.sh
scripts/msys2/: install.bat
scripts/osx/: build_and_deploy.sh  build_and_deploy_all.sh  build_osx_CAT_arm64.sh  build_osx_MAC_CATALYST.sh  build_osx_MAC_CATALYST_ARM64.sh  build_osx_arm64.sh  build_osx_x86_64.sh  build_xcframework.sh  install.sh  xcframework_all.sh
scripts/tvOS/: build_and_deploy_all.sh  build_tvos_SIM_arm64.sh  build_tvos_arm64.sh  build_tvos_x86_64.sh  build_xcframework.sh  install.sh  xcframework_all.sh
scripts/vs/: build_and_deploy.sh  build_and_deploy_all.sh  build_and_deploy_all_CLANG.sh  build_and_deploy_all_MSVC_MD.sh  build_and_deploy_all_MSVC_MT.sh  build_vs22_64.sh  build_vs_32.sh  build_vs_64.sh  build_vs_arm.sh  build_vs_arm64.sh  build_vs_arm64ec.sh  install.sh
scripts/watchos/: build_and_deploy_all.sh  build_watchos_SIM_arm64.sh  build_watchos_arm64.sh  build_watchos_x86_64.sh  build_xcframework.sh  install.sh  xcframework_all.sh
scripts/xros/: build_and_deploy_all.sh  build_xcframework.sh  build_xros_SIM_arm64.sh  build_xros_arm64.sh  build_xros_x86_64.sh  install.sh  xcframework_all.sh
(+56 files in other folders)
